FIX | Box scroll, shadow and vh bugs on Safari

--- a/components/common/Form/style.module.scss
+++ b/components/common/Form/style.module.scss
@@ -2,12 +2,12 @@
 
 .form {
   position: relative;
-  max-height: calc(100vh - 72px - 120px);
-  overflow: scroll;
+  height: 100%;
+  overflow: auto;
   border-radius: 10px;
+  box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.095);
 
   @include media(">desktop") {
-    max-height: initial;
     overflow: visible;
   }
 
@@ -19,7 +19,6 @@
     @include media(">desktop") {
       display: flex;
       gap: 100px;
-      box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.095);
       border-radius: 10px;
       padding: 16px 100px 16px 16px;
     }
@@ -27,9 +26,15 @@
     .box {
       flex: 1;
       position: relative;
+      height: 100%;
+      max-height: calc(var(--vh, 100vh) - 72px - 120px);
+      overflow: scroll;
 
       @include media(">desktop") {
         width: 100%;
+        max-height: initial;
+        height: initial;
+        overflow: initial;
         box-shadow: none;
         border-radius: 0;
         padding: 0;
